Fix Macos linkage with QtAV. All is fine now. Next stage, check MXE cross compilation. Note: DirectX, GDI+ and other M$ frameworks are supported with MinGW. We will see that... This will mean that we can certainly solve the low latencies reported by end-users when playing 4K video under Windows, as DirectX use hardware accelerations.
IMPORTANT: We need a settings panel for QtAV player to choose the right audio/video backends, as plenty are available at compilation time or at run time.
Note: this pannel will be also suitable later with Qt6::Multimedia when we switch back (if it's really necessary of course)

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -311,6 +311,8 @@ if(APPLE)
         ${CMAKE_CURRENT_SOURCE_DIR}/src/codec/video/SurfaceInteropCV.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/src/codec/video/SurfaceInteropIOSurface.mm
 
+        ${CMAKE_CURRENT_SOURCE_DIR}/src/output/audio/AudioOutputAudioToolbox.cpp
+
 # Hardware acceleration from ffmpeg ?
 #        ${CMAKE_CURRENT_SOURCE_DIR}/src/codec/video/VideoDecoderVDA.cpp
     )
