less Clang warnings

--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -11,14 +11,17 @@ APPLY_COMMON_POLICIES()
 # For FFMPEG 4 to 5 deprecrated declarations => Fix code to support FFMPEG 5 API.
 REMOVE_COMPILER_WARNINGS("-Wdeprecated-declarations")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-deprecated-declarations")
+DISABLE_CLANG_COMPILER_WARNINGS("3.99.99" "-Wno-deprecated-declarations")
 
 # For undefined pre-processor values.
 REMOVE_COMPILER_WARNINGS("-Wundef")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-undef")
+DISABLE_CLANG_COMPILER_WARNINGS("3.99.99" "-Wno-undef")
 
 # For not portable pre-processor defined operator uses.
 REMOVE_COMPILER_WARNINGS("-Wexpansion-to-defined")
 DISABLE_GCC_COMPILER_WARNINGS("5.99.99" "-Wno-expansion-to-defined")
+DISABLE_CLANG_COMPILER_WARNINGS("3.99.99" "-Wno-expansion-to-defined")
 
 include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
