--- a/core/libs/video/qtav/CMakeLists.txt
+++ b/core/libs/video/qtav/CMakeLists.txt
@@ -218,10 +218,8 @@ if(HAVE_OPENGL)
     if(NOT Qt6_FOUND)
 
         set(libqtav_SRCS ${libqtav_SRCS}
+            ${CMAKE_CURRENT_SOURCE_DIR}/widgets/opengl/GLWidgetRenderer.cpp
             ${CMAKE_CURRENT_SOURCE_DIR}/widgets/opengl/GLWidgetRenderer2.cpp
-
-            # Disabled in QtAV
-            #${CMAKE_CURRENT_SOURCE_DIR}/widgets/opengl/GLWidgetRenderer.cpp
         )
 
     endif()
