--- a/core/tests/video/qtav/CMakeLists.txt
+++ b/core/tests/video/qtav/CMakeLists.txt
@@ -172,6 +172,16 @@ target_compile_definitions(qtav-simpletranscode_cli PRIVATE ${MEDIAPLAYER_DEFINI
 
 # -------------------------------------------------
 
+set(qtavvideocapture_SRCS ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/videocapture/main.cpp
+                          ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/videocapture/playerwindow.cpp
+)
+
+add_executable(qtav-videocapture_gui ${qtavvideocapture_SRCS})
+target_link_libraries(qtav-videocapture_gui digikamcore ${COMMON_TEST_LINK})
+target_compile_definitions(qtav-videocapture_gui PRIVATE ${MEDIAPLAYER_DEFINITIONS})
+
+# -------------------------------------------------
+
 add_executable(qtav-window_cli ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/window/main.cpp)
 target_link_libraries(qtav-window_cli digikamcore ${COMMON_TEST_LINK})
 target_compile_definitions(qtav-window_cli PRIVATE ${MEDIAPLAYER_DEFINITIONS})
