--- a/core/tests/video/qtav/CMakeLists.txt
+++ b/core/tests/video/qtav/CMakeLists.txt
@@ -204,6 +204,16 @@ target_compile_definitions(qtav-videographicsitem_gui PRIVATE ${MEDIAPLAYER_DEFI
 
 # -------------------------------------------------
 
+set(qtavvideowall_SRCS ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/videowall/main.cpp
+                       ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/videowall/VideoWall.cpp
+)
+
+add_executable(qtav-videowall_gui ${qtavvideowall_SRCS})
+target_link_libraries(qtav-videowall_gui digikamcore ${COMMON_TEST_LINK} ${MEDIAPLAYER_LIBRARIES})
+target_compile_definitions(qtav-videowall_gui PRIVATE ${MEDIAPLAYER_DEFINITIONS})
+
+# -------------------------------------------------
+
 add_executable(qtav-window_cli ${CMAKE_SOURCE_DIR}/core/libs/video/qtav/examples/window/main.cpp)
 target_link_libraries(qtav-window_cli digikamcore ${COMMON_TEST_LINK} ${MEDIAPLAYER_LIBRARIES})
 target_compile_definitions(qtav-window_cli PRIVATE ${MEDIAPLAYER_DEFINITIONS})
