export qtav player as new plublic stand alone tool named avplayer

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -443,6 +443,10 @@ if(DIGIKAM_CAN_BE_COMPILED)
     add_subdirectory(dplugins)
     add_subdirectory(showfoto)
 
+    if(ENABLE_MEDIAPLAYER)
+        add_subdirectory(avplayer)
+    endif()
+
     if(BUILD_TESTING)
         add_subdirectory(tests)
     endif()
